implementazione LoginForm, SignUpForm e fix z-index arrow carouselOffer

--- a/src/style/CarouselOffer.scss
+++ b/src/style/CarouselOffer.scss
@@ -224,6 +224,7 @@
     width: 60px;
     text-align: center;
     font-size: 30px;
+    z-index: 1;
 
     &:hover {
       background-color: rgba(106, 0, 118, 0.271);
